--- a/index.html
+++ b/index.html
@@ -5,16 +5,17 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-
+    
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+TC&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="./css/style.css">
     <link rel="stylesheet" href="./css/datepickerstyle.css">
 </head>
 <body>
+    <div class="wrapper">
+        <h1>DATEPICKER DEMO</h1>
+        <input type="text" class="datepicker-input" placeholder="choose date">        
+    </div>
     <div class="datepicker-wrapper"></div>
-    <input type="text" class="datepicker-input">
-    <input type="text" class="datepicker-input">
-    <input type="text" class="datepicker-input">
-    <input type="text" class="datepicker-input">
-    <input type="text" class="datepicker-input">
     <script src="./datepicker.js"></script>
 </body>
 </html>
